# gw150914-mcp-signal-search

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  env.template  pyproject.toml
data/: matched_filter_records.jsonl
docs/: README.md
mcp-client/: gw_optimization_client.py
mcp-server/: gw_analysis_server.py
